Bug 47766 - mod_autoindex: incremental options not working as described
Summary: mod_autoindex: incremental options not working as described
Status: RESOLVED FIXED
Alias: None
Product: Apache httpd-2
Classification: Unclassified
Component: mod_autoindex (show other bugs)
Version: 2.2.11
Hardware: PC Mac OS X 10.4
: P2 normal (vote)
Target Milestone: ---
Assignee: Apache HTTPD Bugs Mailing List
URL:
Keywords: FixedInTrunk
Depends on:
Blocks:
 
Reported: 2009-08-29 08:41 UTC by whaefelinger
Modified: 2011-09-17 16:04 UTC (History)
0 users



Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description whaefelinger 2009-08-29 08:41:45 UTC
I tested incremental index options for mod_autoindex and I wonder whether I understand the documentation, whether it works as designed or whether I hit a bug. Right now I'm just confused.

As far as I understand, IndexOptions are applicable on the server config level or within 'directory'. Since nothing else is stated, I expect same results:

=== variant A ===
IndexOptions +XHTML
<Directory /foo>
Options Indexes
</Directory>

=== variant B ===
<Directory /foo>
Options Indexes
IndexOptions +XHTML
</Directory>

This is not the case. Variant A does NOT enable XHTML while variant B does.

The documentation states also that multiple index options for a single directory now merged together. 

** I believe that the documentation forgot to mention that incremental options only work on a "single" directory and not on a server config level. **

However: I can only speculate about the reasons why there should be a difference on handling options on a server config or on a directory level. To me, and I truly hope I'm not the only one, makes this difference no sense at all.
Comment 1 Rich Bowen 2010-10-29 11:06:50 UTC
Moving docs bugs to docs@httpd.a.o ownership.
Comment 2 Eric Covener 2010-11-05 00:29:45 UTC
This semss to occur when there are no autoindex directives in the per-dir config, but goes away when there are unrelated directives.
Comment 3 Eric Covener 2010-11-05 00:44:13 UTC
this is a bug
Comment 4 Stefan Fritsch 2011-09-17 16:04:46 UTC
trunk: r1031430
2.2.18: r1069424