PR#47766 mod_autoindex directives not merged into sections with no autoindex directives.

This is due to an empty "opts" field looking just like one that has specified "None".  None is always
alone, so simplify and test for equality.


git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@1031430 13f79535-47bb-0310-9956-ffa450edef68